--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ header {
 }
 .botao, .form-content p {
     width: 95%;
+    min-height: 23px;
     background-color: var(--preto);
     font-weight: 700;
     color: var(--branco);
